--- a/ScreenShot/ScreenShot.csproj
+++ b/ScreenShot/ScreenShot.csproj
@@ -181,9 +181,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release (
-  XCOPY "$(TargetDir)ScreenShot.exe" "$(SolutionDir)binary" /I /F /Y
-)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
